Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.60**

***  Added --inhibit-sim flag for environments using old __Vm_inhibitSim.

***  Added `systemc_dtor for destructor extentions.  [Allan Cochrane]

**** Declare tables static, to reduce D-Cache miss rate.

**** Fix $display %m name not matching Verilog name inside SystemC modules.

* Verilator 3.600 08/28/2006

**   Support dotted cross-hierarchy variable and task references.

**** Lint for x's in generate case statements.

**** Fix line numbers being off by one when first file starts with newline.

**** Fix naming of generate for blocks to prevent non-inline name conflict.

**** Fix redundant statements remaining after table optimization.

* Verilator 3.542 08/11/2006 Stable

**** Fix extraneous UNSIGNED warning when comparing genvars.  [David Hewson]

**** Fix extra whitespace in $display %c.  [by David Addison]

**** vl_finish and vl_fatal now print via VL_PRINTF rather then cerr/cout.

**** Add VL_CONST_W_24X macro.  [Bernard Deadman]

* Verilator 3.541 07/05/2006 Beta

***  Fix "// verilator lint_on" not re-enabling warnings.  [David Hewson]

***  Fix 3.540's multiple memory assignments to same block.  [David Hewson]

**** Add warning on changeDetect to arrayed structures.  [David Hewson]

**** Fix non-zero start number for arrayed instantiations.  [Jae Hossell]

**** Fix GCC 4.0 header file warnings.

* Verilator 3.540 06/27/2006 Beta

**** Optimize combo assignments that are used only once, ~5-25% faster.

**** Optimize delayed assignments to memories inside loops, ~0-5% faster.

**** Fix mis-width warning on bit selects of memories.  [David Hewson]

**** Fix mis-width warning on dead generate-if branches.  [Jae Hossell]

* Verilator 3.533 06/05/2006 Stable

***  Add PDF user manual, verilator.pdf.

**** Fix delayed bit-selected arrayed assignments. [David Hewson]
